--- a/style4.css
+++ b/style4.css
@@ -10,50 +10,124 @@
     margin: 0;  
     padding: 0;  
     box-sizing: border-box;  
+}  
+html{  
+    font-family: 'Roboto Slab', serif;  
+    font-size: 18px;  
+    color:var(--bgColor-2) ;
+}  
+.logo img {
+    position: fixed;
+    width: 9%;
+    height: 9%;
 }
 .home {  
     width: 100%;  
     height: 100vh;  
-    background-color: var(--bgColor-1);  
+    background:url(../img/Fond\ De\ Technologie\ Numérique\ De\ Fil\ De\ Maille\ De\ Réseau\ _\ Vecteur\ Gratuite.jpeg); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
     display: flex;  
-    flex-direction: column;  
+    flex-direction: column;
 }  
+h2{  
+    font-size: 1.5rem;  
+    letter-spacing: 0.12rem;  
+    color: var(--lightColor); 
+    height: 10px;
+    margin-left: 120px;
+    margin-bottom: 7px;
 
-h2{
-    color: var(--lightColor);
-    margin-left: 40%;
-    margin-top: 15%;
-}
-   p{
+}  
+nav{   
+    background-color: white;  
+    display: flex;  
+    justify-content: space-between;  
+    align-items: center;  
+}  
+nav ul li{  
+    list-style-type: none;  
+    display: inline-block;  
+    font-size: 20px;  
+    margin: 0.8rem 1.5rem;  
+}  
+nav ul li a {  
+    color: var(--lightColor);  
+    text-decoration: none;  
+    text-transform: capitalize;  
+    transition: 0.4s;  
+}  
+nav ul li a:hover{  
+    color: var(--bgColor-2);  
+}  
+  
+.btn{  
+    background-color: white;  
+    color: var(--bgColor-1);  
+    text-decoration: none;  
+    font-weight: bold;  
+    padding: 0.80rem 1.80rem;  
+    border-radius: 30px;  
+}  
+   
+span{  
+    color: black;  
+}  
+h1{  
+    color: black;  
+    height: 10px;
+    text-align: center;
     margin: 5%;
-    margin-left: 25%;
-   }
-   body{
-    background: url(../img/4.jpeg);
-   }
-
-.social{ 
-  display: flex;
-  flex-wrap: wrap;
-} 
- 
-.social img{ 
-    justify-content: center;
+}  
+.content {  
+    padding: 0 var(--padding);  
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
+    box-sizing: border-box;  
+    margin: 5rem;  
+    padding: 0;  
+}  
+p{
+    direction: none;
     align-items: center;
-     width: 30px;
-     height: 30px;
-    margin-left: 1800%;
-    margin-right: 10px;
-
-} 
-
-.center-img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    margin: 8%;
+    padding: 1%;font-size: 21px;
+    font-weight: 600;
+    color: black;
+    margin: 20px;
+    height: 35px;
+    text-align: justify;
 }
-.social img:hover{ 
-    transform: scale(1.2);
+.modified-image{
+    width: 80%;
+    height: 80%;
+    margin-right: 150px;
+    margin-left: 910px;
+    margin-top: 200px;
 }
-
+.modified .text{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rosybrown;
+    color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    }
+    .custom-button { background-color: var(--lightColor);
+        border: none;
+         color: white;
+          padding: 6px 10px;
+           text-align: center;
+            text-decoration: none; 
+            display: flex;
+             font-size: 16px;
+              margin: 0px 0px;
+               cursor: pointer;
+                transition-duration: 0.4s; 
+                margin-left: 37%;
+                margin-bottom: 5%;
+               } 
+               .custom-button:hover { background-color: var(--lightColor); }
